--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "boatrace-ai",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2"
   }
 }
