--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "boatrace-ai",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.7",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "openai": "^4.0.0"
   }
 }
