--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2"
   }
 }
